# vcard

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: create_personal_card.rs
src/: error.rs  fold.rs  lib.rs  parameters.rs  property.rs  syntax.rs  vcard.rs
src/escaping/: mod.rs
src/parameters/: alternative_id.rs  any.rs  calscale.rs  geo.rs  label.rs  language.rs  media_type.rs  mod.rs  preference.rs  property_id.rs  sort_as.rs  time_zone.rs  typ.rs  tz.rs  value.rs
src/parameters/types/: mod.rs
src/parse/: content_line.rs  lines.rs  mod.rs
src/properties/: address.rs  anniversary.rs  begin.rs  birthday.rs  calendar_address_uri.rs  calendar_uri.rs  category.rs  client_property_id_map.rs  email.rs  end.rs  fburl.rs  formatted_name.rs  gender.rs  geo.rs  impp.rs  key.rs  language.rs  logo.rs  member.rs  mod.rs  name.rs  nickname.rs  note.rs  organization.rs  photo.rs  product_id.rs  relationship.rs  revision.rs  role.rs  sound.rs  source.rs  telephone.rs  time_zone.rs  title.rs  uid.rs  url.rs  version.rs  x_property.rs
src/value/: integer.rs  mod.rs  text.rs
src/values/: address_value.rs  attribute_value.rs  audio_value.rs  boolean.rs  calscale_value.rs  client_property_id_map_value.rs  date_time.rs  email_value.rs  float.rs  gender_value.rs  geo_value.rs  image_value.rs  integer.rs  key_value.rs  kind_value.rs  language_tag.rs  mod.rs  name.rs  name_value.rs  parameter_value.rs  preference_value.rs  product_id_value.rs  property_id_value.rs  related_type.rs  sound_value.rs  tel_type.rs  telephone_type.rs  telephone_value.rs  text.rs  time_zone_value.rs  type_value.rs  uid_value.rs  uri.rs  url.rs  uuid.rs  value_type.rs  version_value.rs
src/values/types/: mod.rs
tests/: parse.rs  round_trip.rs  serialize.rs  vcard.rs
