[package]
name = "vcard"
version = "0.4.12"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/magiclen/vcard"
homepage = "https://magiclen.org/vcard"
keywords = ["vcard", "rfc6350", "rfc-6350"]
categories = ["value-formatting", "parser-implementations"]
description = "A pure Rust implementation of vCard based on RFC 6350."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64-stream = "2"
mime = "0.3.12"
mime_guess = "2"
chrono = "0.4.6"
chrono-tz = "0.8"
regex = "1.1"
lazy_static = "1.1"
percent-encoding = "2"
idna = "0.3"

[dependencies.validators]
version = "0.20.2"
features = ["phone-number"]