[package]
name = "vcard"
version = "0.5.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/magiclen/vcard"
homepage = "https://magiclen.org/vcard"
keywords = ["vcard", "vcf", "rfc6350", "rfc9554", "parser"]
categories = ["parser-implementations", "value-formatting"]
description = "A pure Rust implementation of vCard 4.0 for generating and parsing vCards, based on RFC 6350 and RFC 9554."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = "0.22"
chrono = "0.4.25"
chrono-tz = "0.10"
language-tags = "0.3"
mime = "0.3.4"
mime_guess = "2"
url = "2"

[dependencies.validators]
version = "0.26"
default-features = false
features = ["std", "derive", "email", "phone", "uuid"]
